# cpp-make-cmake-template

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: makefile.yml
cmake/: fmt.cmake  spdlog.cmake
include/: .gitkeep
src/: main.cpp
tests/: test_main.cpp
